# GerdsenAI-CLI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMMAND_CONSOLIDATION_CHANGES.md  CONVERSATION_COMMANDS.md  CONVERSATION_IO_IMPLEMENTATION.md  DE_CONTAINERIZATION_SUMMARY.md  Dockerfile  FEATURE_COMPLETE.md  FEATURE_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LAYOUT_REORGANIZATION_SUMMARY.md  LICENSE  NEXT_STEPS_PLANNING.md  PHASE_1_PROMPT_TOOLKIT_COMPLETE.md  PHASE_8B_TEST_REPORT.md  QUICK_START_IMPLEMENTATION.md  README.md  SESSION_SUMMARY_STATUS_MESSAGES.md  SLASH_COMMAND.MD  SLASH_COMMANDS.MD  TESTING_GUIDE.md  TODO.md  TODO_UPDATE_SUMMARY.md  TUI_INTEGRATION_SUMMARY.md  TUI_LAUNCH_STATUS.md  UPGRADE_GUIDE.md  demo_animations.py  demo_tui.py  gerdsenai-ascii-art.txt  pyproject.toml  pyrightconfig.json  test_animation_system.py  test_intelligence_tracking.py  test_phase8c_simple.py
.claude/: DREAM.md  HANDOFF.md  clinerules.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh  validate-container.sh
.github/: azure-instructions.md  copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: ADDITIONAL_IMPROVEMENTS.md  AUDIO_PHASE3_COMPLETE.md  CLAUDE.md  CLEANUP_COMPLETE.md  CRITICAL_FIXES_APPLIED.md  FRONTIER_IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  ROADMAP.md  SMART_ROUTER_INTEGRATION.md  SOCRATIC_AUDIT_SESSION_SUMMARY.md  TECHNICAL_DEBT_CLEANUP_SUMMARY.md  TODO.md  TUI_POLISH_COMPLETE.md  TUI_TROUBLESHOOTING.md  VERIFY.md  VISION_INTEGRATION.md
docs/archive/: COMPREHENSIVE_POLISHING_SUMMARY.md  COMPREHENSIVE_REVIEW_2025.md  CRITICAL_ISSUES_AUDIT.md  DARPA_VALIDATION_REPORT.md  FRONTIER_ARCHITECTURE.md  PHASE_9_PART1_COMPLETE.md  PHASE_9_WORLD_CLASS_PLAN.md  POLISHING_PHASE_SUMMARY.md  REVIEW_SUMMARY.md  VISION_PHASE2_COMPLETE.md
docs/archive/features/: CONVERSATION_IO_IMPLEMENTATION.md  DE_CONTAINERIZATION_SUMMARY.md  ENHANCED_TUI_IMPLEMENTATION.md  MULTI_STEP_PLANNING.md  PHASE_1_AUTO_SCROLL_IMPLEMENTATION.md  PHASE_1_PROMPT_TOOLKIT_COMPLETE.md  PHASE_8B_TEST_REPORT.md  PHASE_8C_CONTEXT_WINDOW_AUTO_DETECTION.md  PHASE_8D7_PROACTIVE_SUGGESTIONS.md  SESSION_SUMMARY_STATUS_MESSAGES.md  STATUS_MESSAGE_INTEGRATION.md  TUI_INTEGRATION_COMPLETE.md  TUI_INTEGRATION_SUMMARY.md
docs/development/: CONTRIBUTING.md  CONVERSATION_COMMANDS.md  NEXT_STEPS_PLANNING.md  QUICK_START_IMPLEMENTATION.md  SECURITY_IMPROVEMENTS.md  TESTING_GUIDE.md
docs/features/: ALIGNMENT_ANALYSIS.md  ANIMATION_SYSTEM_IMPLEMENTATION.md  AUTOMATIC_CONTEXT_LOADING.md  CODE_QUALITY_IMPROVEMENTS_2025-10-06.md  ENHANCED_TUI_IMPLEMENTATION.md  FEATURE_COMPLETE.md  FEATURE_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LAYOUT_REORGANIZATION_SUMMARY.md  PHASE_1_AUTO_SCROLL_IMPLEMENTATION.md  PHASE_8D4_CLARIFYING_QUESTIONS.md  PHASE_8D5_COMPLEXITY_DETECTION.md  PHASE_8D6_CONFIRMATION_DIALOGS.md  STATUS_MESSAGE_INTEGRATION.md  TODO_UPDATE_SUMMARY.md  TUI_INTEGRATION_COMPLETE.md  TUI_LAUNCH_STATUS.md
docs/superpowers/plans/: 2026-06-02-cli-fleet-dispatch.md
examples/: README.md  vision_examples.md
examples/config/: basic.json  mcp-github.json  power-user.json
examples/plugins/vision/: example_vision.py
gerdsenai_cli/: __init__.py  __main__.py  cli.py  constants.py  main.py  py.typed
gerdsenai_cli/commands/: __init__.py  agent.py  anthropic_cmd.py  audio_commands.py  base.py  clarify_commands.py  complexity_commands.py  delegate.py  discover.py  files.py  index.py  intelligence.py  mcp.py  memory.py  model.py  parser.py  persona.py  planning.py  skills.py  suggest_commands.py  system.py  terminal.py  undo_commands.py  vision_commands.py
gerdsenai_cli/config/: __init__.py  manager.py  settings.py
gerdsenai_cli/core/: __init__.py  agent.py  agent_profiles.py  agent_tools.py  cache.py  capabilities.py  clarification.py  complexity.py  confirmation.py  context_manager.py  delegation.py  embeddings.py  errors.py  file_editor.py  input_validator.py  llm_client.py  mcp_client.py  mcp_tools.py  memory.py  modes.py  planner.py  proactive_context.py  rate_limiter.py  repo_index.py  retry.py  secrets.py  skill_loader.py  smart_router.py  suggestions.py  terminal.py  token_counter.py  tool_parsing.py  tool_registry.py  tool_shim.py  types.py  vector_store.py
gerdsenai_cli/core/providers/: __init__.py  anthropic.py  base.py  detector.py  huggingface.py  lm_studio.py  ollama.py  tailscale.py  vllm.py
gerdsenai_cli/plugins/: __init__.py  base.py  registry.py
gerdsenai_cli/plugins/audio/: bark_plugin.py  whisper_plugin.py
gerdsenai_cli/plugins/vision/: __init__.py  llava_plugin.py  tesseract_ocr.py
gerdsenai_cli/ui/: __init__.py  animations.py  console.py  error_display.py  input_handler.py  layout.py  persistent_tui.py  prompt_toolkit_tui.py  status_display.py  tui_edge_cases.py
gerdsenai_cli/utils/: __init__.py  conversation_io.py  display.py  helpers.py  performance.py  status_messages.py  validation.py
scripts/: check_venv.py
tests/: __init__.py  conftest.py  harness.py  simple_test.py  test_agent_loop_streaming.py  test_agent_loop_wiring.py  test_agent_profiles.py  test_agent_retrieval_routing.py  test_agent_send_path.py  test_animation_system.py  test_anthropic_provider.py  test_async_client_lifecycle.py  test_bridge_auth.py  test_cache.py  test_clarification.py  test_cli_entry.py  test_command_parser.py  test_complexity.py  test_confirmation.py  test_constants_comprehensive.py  test_context_window_detection.py  test_conversation_control.py  test_conversation_io.py  test_delegation.py  test_discovery.py  test_doctor.py  test_env_config.py  test_errors_comprehensive.py  test_harness.py  test_headless.py  test_integration_features.py  test_integration_scenarios.py  test_intelligence_tracking.py  test_intent_detection_live.py  test_lazy_project_scan.py  test_llm_client.py  test_llm_client_comprehensive.py  test_logo_asset.py  test_mcp_tools.py  test_mode_sync.py  (+29 more)
tests/core/: test_error_handling.py
tests/manual/: TUI_INTEGRATION_SCENARIOS.md  test_tui_edge_cases.py
(+1 files in other folders)
