[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerdsenai-cli"
version = "0.1.0"
description = "A terminal-based agentic coding tool for local AI models"
authors = [
    {name = "GerdsenAI", email = "admin@gerdsenai.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "cli", "coding", "assistant", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.13.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "colorama>=0.4.6",
    "psutil>=6.1.0",
    "pyperclip>=1.9.0",
    "prompt_toolkit>=3.0.48",
    "tiktoken>=0.8.0",
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-psutil>=6.1.0",
    "types-pyperclip>=1.9.0",
    "types-cachetools>=5.5.0",
]

[project.scripts]
gerdsenai = "gerdsenai_cli.cli:main"

[project.urls]
Homepage = "https://github.com/GerdsenAI/GerdsenAI-CLI"
Repository = "https://github.com/GerdsenAI/GerdsenAI-CLI"
Documentation = "https://github.com/GerdsenAI/GerdsenAI-CLI#readme"
"Bug Tracker" = "https://github.com/GerdsenAI/GerdsenAI-CLI/issues"

[tool.hatch.build.targets.wheel]
packages = ["gerdsenai_cli"]
include = ["gerdsenai_cli/py.typed"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gerdsenai_cli"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=gerdsenai_cli --cov-report=term-missing --cov-report=html --cov-fail-under=90"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["gerdsenai_cli"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
